# sdl3_image_cmake_test

./: CMakeLists.txt  main.c
.github/workflows/: build.yml
